p15061 BGBilling contract card fixes